Bug 135133 - Buildid is neither displayed in nor copyable from the about dialog
Summary: Buildid is neither displayed in nor copyable from the about dialog
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:7.1.0 target:7.0.1
Keywords:
: 135191 135459 135970 (view as bug list)
Depends on:
Blocks: About-Dialog
  Show dependency treegraph
 
Reported: 2020-07-25 14:32 UTC by himajin100000
Modified: 2020-09-29 09:05 UTC (History)
10 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
version.ini (1.40 KB, text/plain)
2020-07-25 14:33 UTC, himajin100000
Details
bootstrap.ini (121 bytes, text/plain)
2020-07-25 14:37 UTC, himajin100000
Details
clip from 2020-07-27 TB77 build -- how would one ID it for QA (159.47 KB, image/png)
2020-07-27 13:43 UTC, V Stuart Foote
Details

Note You need to log in before you can comment on or make changes to this bug.
Description himajin100000 2020-07-25 14:32:36 UTC
Description:
see steps to reproduce.

Steps to Reproduce:
1. open LibreOffice latest nightly build
2. press the button in the about dialog to copy build information
3. paste the content to notepad

Actual Results:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: <buildversion>
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: default; VCL: win
Locale: ja-JP (ja_JP); UI: en-US
Calc: CL

Expected Results:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: 641dbafcb4c7b00bc9e56b58d12c95a6f05ee88d
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: default; VCL: win
Locale: ja-JP (ja_JP); UI: en-US
Calc: CL


Reproducible: Always


User Profile Reset: Yes



Additional Info:
version as given above
Comment 1 himajin100000 2020-07-25 14:33:55 UTC
Created attachment 163528 [details]
version.ini
Comment 2 himajin100000 2020-07-25 14:37:10 UTC
Created attachment 163529 [details]
bootstrap.ini
Comment 3 himajin100000 2020-07-25 16:04:18 UTC
if I remove BuildVersion from version.ini, I can copy the buildid(641dbafcb4c7b00bc9e56b58d12c95a6f05ee88d)
Comment 4 V Stuart Foote 2020-07-25 17:40:32 UTC
Confirmed with today's TB77 Windows build

Version: 7.1.0.0.alpha0+ (x64)
Build ID: <buildversion>
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded

And from the version.ini for the install:

BuildVersion=<buildversion>
buildid=641dbafcb4c7b00bc9e56b58d12c95a6f05ee88d
Comment 5 V Stuart Foote 2020-07-27 12:14:46 UTC
*** Bug 135191 has been marked as a duplicate of this bug. ***
Comment 6 Heiko Tietze 2020-07-27 12:28:34 UTC
By design, see bug 134522.
Comment 7 Telesto 2020-07-27 12:40:47 UTC
There is a need for build ID or a build date
Comment 8 V Stuart Foote 2020-07-27 13:02:04 UTC
@Heiko, different items. Issue now is that the HASH ID is not showing in the About dialog nor being copied to clipboard on button action--so no way to identify the build signature.
Comment 9 Heiko Tietze 2020-07-27 13:14:03 UTC
If the hash was stored with the build ID we would have to save it with the extra info. Cloph, what's your opinion?
Comment 10 V Stuart Foote 2020-07-27 13:43:59 UTC
Created attachment 163634 [details]
clip from 2020-07-27 TB77 build -- how would one ID it for QA

Clip showing the lack of *any* useful Build ID detail in the Help Aboout, or clip.

Taken from TB77 daily for 2020-07-27 where program/version.ini has:

...
BuildVersion=<buildversion>
buildid=d7894ddca9d5f56e86f9b488c97e3268637b017e
ExtensionUpdateURL=http://updateexte.libreoffice.org/ExtensionUpdateService/check.Update
MsiProductVersion=7.1.0.0.alpha0
ProductCode={C2C11E5D-C50E-4392-901C-EBECD7116C03}
ReferenceOOoMajorMinor=4.1
...
Comment 11 Xisco Faulí 2020-07-27 13:45:49 UTC
I can't reproduce it in

Version: 7.1.0.0.alpha0+ (x64)
Build ID: a9f68d9d9ae8d7c8f79152055795044993b252ea
CPU threads: 16; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: en-GB (en_GB); UI: en-US
Calc: threaded

(win bisect repository)
Comment 12 himajin100000 2020-07-27 18:18:18 UTC
(In reply to Xisco Faulí from comment #11)
> I can't reproduce it in
> 
> Version: 7.1.0.0.alpha0+ (x64)
> Build ID: a9f68d9d9ae8d7c8f79152055795044993b252ea
> CPU threads: 16; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
> Locale: en-GB (en_GB); UI: en-US
> Calc: threaded
> 
> (win bisect repository)

That can happen when version.ini is generated by the msi installer and when bisect does not provide msi installer, I guess.

https://opengrok.libreoffice.org/xref/core/scp2/source/ooo/common_brand.scp?r=ae855bf4&mo=15576&fi=593#602
Comment 13 Heiko Tietze 2020-08-05 11:20:14 UTC
*** Bug 135459 has been marked as a duplicate of this bug. ***
Comment 14 Mike Kaganski 2020-08-19 08:15:04 UTC
https://gerrit.libreoffice.org/c/core/+/100957
Comment 15 Commit Notification 2020-08-19 08:35:39 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/00fa759dc9f13eb4618a7762be9ca6eaf3fd37f7

tdf#135133: Don't try to read BuildVersion

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Telesto 2020-08-19 08:38:48 UTC
Thanks for solving this Mike!
Comment 17 Commit Notification 2020-08-19 13:48:33 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/0a796797ddfe2d1913ac91908074c397cf7c9c82

tdf#135133: Don't try to read BuildVersion

It will be available in 7.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 baffclan 2020-08-20 11:49:43 UTC
Cannot reproduce new build.

Version: 7.1.0.0.alpha0+ (x64)
Build ID: e69fafe1873e4afbe739f21f7a82a069cf7eb5b2
CPU threads: 12; OS: Windows 10.0 Build 19041; UI render: Skia/Vulkan; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL

Thanks for fixing this!

-> v.
Comment 19 Commit Notification 2020-08-20 19:40:45 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-0-1":

https://git.libreoffice.org/core/commit/37f452bc2beeae9b4648013a3bf4f2e8b56c0c85

tdf#135133: Don't try to read BuildVersion

It will be available in 7.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 20 V Stuart Foote 2020-08-21 05:32:18 UTC
*** Bug 135970 has been marked as a duplicate of this bug. ***